# sleep-scoring-chatgpt

./: .gitignore  AGENTS.md  README.md  codex_work_log.md  project_overview.md  pyproject.toml
sleep_scoring_chatgpt/: __init__.py  chatgpt_inference.py  chatgpt_preview.py  chatgpt_tools.py  config.py  export_prediction_mat.py  get_fft_plots.py  inference_chatgpt.py  make_figure.py  make_figure_chatgpt.py  make_figure_dev.py  run_inference_chatgpt.py
sleep_scoring_chatgpt/sleep_scoring_examples/: groundtruth_reasons.json  groundtruth_reasons_model_friendly.json
tests/: conftest.py  test_chatgpt_tools.py  test_export_prediction_mat.py  test_inference_chatgpt.py
